--- a/joomla25/administrator/language/en-GB/en-GB.com_simplelists.ini
+++ b/joomla25/administrator/language/en-GB/en-GB.com_simplelists.ini
@@ -50,9 +50,11 @@ COM_SIMPLELISTS_ITEM_IMAGE="Image"
 COM_SIMPLELISTS_ITEM_LINKTYPE="Link Type"
 COM_SIMPLELISTS_ITEM_LINK="Link"
 COM_SIMPLELISTS_ITEM_EMPTY_TITLE="Empty title"
-COM_SIMPLELISTS_ITEM_FIELDSET_DETAILS="Details"
+COM_SIMPLELISTS_ITEM_FIELDSET_BASIC="Basic"
 COM_SIMPLELISTS_ITEM_FIELDSET_IMAGE="Image"
 COM_SIMPLELISTS_ITEM_FIELDSET_LINK="Link Settings"
+COM_SIMPLELISTS_ITEM_FIELDSET_TEXT="Text"
+COM_SIMPLELISTS_ITEM_FIELDSET_PARAMS="Parameters"
 
 ; Selections
 COM_SIMPLELISTS_SELECT_CATEGORY="Select Category"
