DEV: Work in progress for joomla3 DEV: Bootstrapping of frontend layouts

--- a/joomla25/administrator/language/en-GB/en-GB.com_simplelists.ini
+++ b/joomla25/administrator/language/en-GB/en-GB.com_simplelists.ini
@@ -3,22 +3,51 @@ COM_SIMPLELISTS="SimpleLists"
 COM_SIMPLELISTS_HOME="Home"
 COM_SIMPLELISTS_ITEMS="Items"
 COM_SIMPLELISTS_CATEGORIES="Categories"
+COM_SIMPLELISTS_CATEGORY="Category"
 
 ; Config
+COM_SIMPLELISTS_CONFIG_FIELDSET_BASIC="Basic"
+COM_SIMPLELISTS_CONFIG_FIELD_ORDERING="Ordering"
+COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_ORDER="Ordering"
+COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_RDATE="Oldest first"
+COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_DATE="Most recent first"
+COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_ALPHA="Title Alphabetical"
+COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_RALPHA="Title Reverse-Alphabetical"
+COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_RANDOM="Random"
+;
+COM_SIMPLELISTS_CONFIG_FIELDSET_LAYOUT="SimpleLists Layout"
+COM_SIMPLELISTS_CONFIG_FIELD_SHOW_TOTOP="To top"
+COM_SIMPLELISTS_CONFIG_FIELD_SHOW_TOTOP_IMAGE="To top image"
+COM_SIMPLELISTS_CONFIG_FIELD_SHOW_TOTOP_TEXT="To top text"
+;
+COM_SIMPLELISTS_CONFIG_FIELDSET_STYLING="SimpleLists Styling"
+COM_SIMPLELISTS_CONFIG_FIELD_LOAD_LIGHTBOX="Load Lightbox"
+COM_SIMPLELISTS_CONFIG_FIELD_LOAD_CSS="Load default CSS"
+COM_SIMPLELISTS_CONFIG_FIELD_LOAD_JS="Load default JS"
+;
+COM_SIMPLELISTS_CONFIG_FIELDSET_STYLING="SimpleLists Pagination"
+COM_SIMPLELISTS_CONFIG_FIELD_USE_PAGINATION="Use pagination"
+COM_SIMPLELISTS_CONFIG_FIELD_LIMIT="Page limit"
+COM_SIMPLELISTS_CONFIG_FIELD_SHOW_INDEX="Item index"
+COM_SIMPLELISTS_CONFIG_FIELD_SHOW_ALPHA_INDEX="Alphabetical index"
+;
 COM_SIMPLELISTS_CONFIG_FIELDSET_CATEGORY="Category"
 COM_SIMPLELISTS_CONFIG_FIELD_SHOW_CATEGORY_TITLE="Category Title"
 COM_SIMPLELISTS_CONFIG_FIELD_SHOW_CATEGORY_DESCRIPTION="Category Description"
 COM_SIMPLELISTS_CONFIG_FIELD_SHOW_CATEGORY_IMAGE="Category Image"
+;
 COM_SIMPLELISTS_CONFIG_FIELDSET_ITEM_BASIC="Item Basic"
 COM_SIMPLELISTS_CONFIG_FIELD_SHOW_ITEM_TITLE="Item Title"
 COM_SIMPLELISTS_CONFIG_FIELD_SHOW_ITEM_TEXT="Item Text"
 COM_SIMPLELISTS_CONFIG_FIELD_SHOW_ITEM_IMAGE="Item Image"
 COM_SIMPLELISTS_CONFIG_FIELD_TITLE_LINK="Item Linked Title"
 COM_SIMPLELISTS_CONFIG_FIELD_IMAGE_LINK="Item Linked Image"
+;
 COM_SIMPLELISTS_CONFIG_FIELDSET_ITEM_READMORE="Item Readmore"
 COM_SIMPLELISTS_CONFIG_FIELD_READMORE="Read-more Link"
 COM_SIMPLELISTS_CONFIG_FIELD_READMORE_TEXT="Read-more text"
 COM_SIMPLELISTS_CONFIG_FIELD_READMORE_CLASS="Read-more class"
+;
 COM_SIMPLELISTS_CONFIG_FIELDSET_ITEM_OTHER="Item Other"
 COM_SIMPLELISTS_CONFIG_FIELD_LINK_CLASS="Link class"
 COM_SIMPLELISTS_CONFIG_FIELD_LINK_REL="Link relationshop"
@@ -31,6 +60,7 @@ COM_SIMPLELISTS_CONFIG_FIELD_PICTURE_ALIGNMENT="Image Align"
 COM_SIMPLELISTS_CONFIG_FIELD_PICTURE_ALIGNMENT_OPTION_NONE="None"
 COM_SIMPLELISTS_CONFIG_FIELD_PICTURE_ALIGNMENT_OPTION_LEFT="Left"
 COM_SIMPLELISTS_CONFIG_FIELD_PICTURE_ALIGNMENT_OPTION_RIGHT="Right"
+;
 COM_SIMPLELISTS_CONFIG_FIELDSET_ADVANCED="Advanced"
 COM_SIMPLELISTS_CONFIG_FIELD_SEF_URL="SEF-type"
 COM_SIMPLELISTS_CONFIG_FIELD_SEF_URL_OPTION_ALIAS="Alias"
