Alpha-release of 1.6.1.0

--- a/joomla25/administrator/language/en-GB/en-GB.com_simplelists.ini
+++ b/joomla25/administrator/language/en-GB/en-GB.com_simplelists.ini
@@ -14,6 +14,8 @@ COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_DATE="Most recent first"
 COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_ALPHA="Title Alphabetical"
 COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_RALPHA="Title Reverse-Alphabetical"
 COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_RANDOM="Random"
+COM_SIMPLELISTS_CONFIG_FIELD_COLUMNS="Columns"
+COM_SIMPLELISTS_CONFIG_FIELD_DISABLE_JUMPLABELS="Disable Jumplabels"
 ;
 COM_SIMPLELISTS_CONFIG_FIELDSET_LAYOUT="SimpleLists Layout"
 COM_SIMPLELISTS_CONFIG_FIELD_SHOW_TOTOP="To top"
@@ -25,11 +27,24 @@ COM_SIMPLELISTS_CONFIG_FIELD_LOAD_LIGHTBOX="Load Lightbox"
 COM_SIMPLELISTS_CONFIG_FIELD_LOAD_CSS="Load default CSS"
 COM_SIMPLELISTS_CONFIG_FIELD_LOAD_JS="Load default JS"
 ;
-COM_SIMPLELISTS_CONFIG_FIELDSET_STYLING="SimpleLists Pagination"
+COM_SIMPLELISTS_CONFIG_FIELDSET_PAGINATION="SimpleLists Pagination"
 COM_SIMPLELISTS_CONFIG_FIELD_USE_PAGINATION="Use pagination"
 COM_SIMPLELISTS_CONFIG_FIELD_LIMIT="Page limit"
 COM_SIMPLELISTS_CONFIG_FIELD_SHOW_INDEX="Item index"
 COM_SIMPLELISTS_CONFIG_FIELD_SHOW_ALPHA_INDEX="Alphabetical index"
+;
+COM_SIMPLELISTS_CONFIG_FIELDSET_HIERARCHY="SimpleLists Hierarchy"
+COM_SIMPLELISTS_CONFIG_FIELD_SHOW_CATEGORY_PARENT="Category Parent"
+COM_SIMPLELISTS_CONFIG_FIELD_SHOW_CATEGORY_CHILDS="Category Children"
+COM_SIMPLELISTS_CONFIG_FIELD_SHOW_CATEGORY_CHILDS_DESCRIPTION="Show Child Description"
+;
+COM_SIMPLELISTS_CONFIG_FIELDSET_OTHER="SimpleLists Other Options"
+COM_SIMPLELISTS_CONFIG_FIELD_SHOW_HEADER_MODULES="Header Modules"
+COM_SIMPLELISTS_CONFIG_FIELD_SHOW_FOOTER_MODULES="Footer Modules"
+COM_SIMPLELISTS_CONFIG_FIELD_SHOW_FEED="RSS/Atom Feeds"
+COM_SIMPLELISTS_CONFIG_FIELD_SHOW_EMPTY_LIST="No Items Found"
+COM_SIMPLELISTS_CONFIG_FIELD_SHOW_PDF_ICON="PDF Icon"
+COM_SIMPLELISTS_CONFIG_FIELD_SHOW_PRINT_ICON="Print Icon"
 ;
 COM_SIMPLELISTS_CONFIG_FIELDSET_CATEGORY="Category"
 COM_SIMPLELISTS_CONFIG_FIELD_SHOW_CATEGORY_TITLE="Category Title"
