--- a/joomla15/administrator/language/en-GB/en-GB.com_simplelists.sys.ini
+++ b/joomla15/administrator/language/en-GB/en-GB.com_simplelists.sys.ini
@@ -12,6 +12,16 @@ COM_SIMPLELISTS_VIEW_ITEMS_LAYOUT_BASIC_LABEL="SimpleLists Basic Layout"
 COM_SIMPLELISTS_VIEW_ITEMS_LAYOUT_BASIC_DESC="SimpleLists Basic Layout"
 COM_SIMPLELISTS_VIEW_ITEMS_LAYOUT_DEFAULT_LABEL="SimpleLists Default Layout"
 COM_SIMPLELISTS_VIEW_ITEMS_LAYOUT_DEFAULT_DESC="SimpleLists Default Layout"
+COM_SIMPLELISTS_VIEW_ITEMS_LAYOUT_HOVER_LABEL="SimpleLists Hover Layout"
+COM_SIMPLELISTS_VIEW_ITEMS_LAYOUT_HOVER_DESC="SimpleLists Hover Layout"
+COM_SIMPLELISTS_VIEW_ITEMS_LAYOUT_PICTURE_LABEL="SimpleLists Picture Layout"
+COM_SIMPLELISTS_VIEW_ITEMS_LAYOUT_PICTURE_DESC="SimpleLists Picture Layout"
+COM_SIMPLELISTS_VIEW_ITEMS_LAYOUT_RAW_LABEL="SimpleLists Raw Layout"
+COM_SIMPLELISTS_VIEW_ITEMS_LAYOUT_RAW_DESC="SimpleLists Raw Layout"
+COM_SIMPLELISTS_VIEW_ITEMS_LAYOUT_SELECT_LABEL="SimpleLists Selectbox Layout"
+COM_SIMPLELISTS_VIEW_ITEMS_LAYOUT_SELECT_DESC="SimpleLists Selectbox Layout"
+COM_SIMPLELISTS_VIEW_ITEMS_LAYOUT_TABLE_LABEL="SimpleLists Table Layout"
+COM_SIMPLELISTS_VIEW_ITEMS_LAYOUT_TABLE_DESC="SimpleLists Table Layout"
 COM_SIMPLELISTS_VIEW_ITEMS_LAYOUT_TOGGLE_LABEL="SimpleLists Toggle Layout"
 COM_SIMPLELISTS_VIEW_ITEMS_LAYOUT_TOGGLE_DESC="SimpleLists Toggle Layout"
 
