--- a/joomla25/language/en-GB/en-GB.mod_simplelists_items.sys.ini
+++ b/joomla25/language/en-GB/en-GB.mod_simplelists_items.sys.ini
@@ -1,3 +1,2 @@
-; SimpleLists language file
-MOD_SIMPLELISTS_ITEMS="SimpleLists items"
+MOD_SIMPLELISTS_ITEMS="SimpleLists Items"
 MOD_SIMPLELISTS_ITEMS_DESC="Module to display items of the SimpleLists component"
