--- a/joomla15/administrator/language/en-GB/en-GB.com_simplelists.ini
+++ b/joomla15/administrator/language/en-GB/en-GB.com_simplelists.ini
@@ -159,6 +159,8 @@ LIB_YIREO_TABLE_FIELDNAME_HITS="Hits"
 LIB_YIREO_TABLE_FIELDNAME_ORDERING="Order"
 LIB_YIREO_TABLE_FIELDNAME_ACCESS="Access"
 LIB_YIREO_TABLE_FIELDNAME_CATEGORIES="Categories"
+LIB_YIREO_TABLE_ERROR="Unknown Table Error"
+LIB_YIREO_TABLE_UNKNOWN_ID="Unknown Row ID"
 ; Yireo Library - view
 LIB_YIREO_VIEW_EDIT="Edit"
 LIB_YIREO_VIEW_NEW="New"
