Fix in ACL-system New parameter for query-debugging

--- a/joomla25/administrator/language/en-GB/en-GB.com_simplelists.ini
+++ b/joomla25/administrator/language/en-GB/en-GB.com_simplelists.ini
@@ -82,6 +82,7 @@ COM_SIMPLELISTS_CONFIG_FIELD_SEF_URL_OPTION_ALIAS="Alias"
 COM_SIMPLELISTS_CONFIG_FIELD_SEF_URL_OPTION_SLUG="Slug"
 COM_SIMPLELISTS_CONFIG_FIELD_USE_PARENT_URL="Use parent URL"
 COM_SIMPLELISTS_CONFIG_FIELD_AUTO_ORDERING="Automatic ordering"
+COM_SIMPLELISTS_CONFIG_FIELD_DEBUG="Debugging"
 
 ; Form 
 COM_SIMPLELISTS_ITEM_PARAMS_ITEM_FIELDSET="Parameters - Basic"
