Update of language-file

--- a/joomla25/administrator/language/en-GB/en-GB.com_simplelists.ini
+++ b/joomla25/administrator/language/en-GB/en-GB.com_simplelists.ini
@@ -82,6 +82,8 @@ COM_SIMPLELISTS_CONFIG_FIELD_SEF_URL_OPTION_ALIAS="Alias"
 COM_SIMPLELISTS_CONFIG_FIELD_SEF_URL_OPTION_SLUG="Slug"
 COM_SIMPLELISTS_CONFIG_FIELD_USE_PARENT_URL="Use parent URL"
 COM_SIMPLELISTS_CONFIG_FIELD_AUTO_ORDERING="Automatic ordering"
+COM_SIMPLELISTS_CONFIG_FIELD_THUMBS_LIMIT="Thumbs Limit"
+COM_SIMPLELISTS_CONFIG_FIELD_THUMBS_LIMIT_DESC="Determines at which byte-size to start creating thumbnails. Set to 0 to disable."
 COM_SIMPLELISTS_CONFIG_FIELD_DEBUG="Debugging"
 
 ; Form 
