Language-file updates Fix PHP notices in helpers Rewrite plugins so that they do not depend on Default Plugin anymore

--- a/joomla15/administrator/language/en-GB/en-GB.com_simplelists.ini
+++ b/joomla15/administrator/language/en-GB/en-GB.com_simplelists.ini
@@ -75,6 +75,7 @@ COM_SIMPLELISTS_CONFIG_FIELD_PICTURE_ALIGNMENT="Image Align"
 COM_SIMPLELISTS_CONFIG_FIELD_PICTURE_ALIGNMENT_OPTION_NONE="None"
 COM_SIMPLELISTS_CONFIG_FIELD_PICTURE_ALIGNMENT_OPTION_LEFT="Left"
 COM_SIMPLELISTS_CONFIG_FIELD_PICTURE_ALIGNMENT_OPTION_RIGHT="Right"
+COM_SIMPLELISTS_CONFIG_FIELD_PICTURE_ALIGNMENT_OPTION_TOGGLE="Toggle"
 ;
 COM_SIMPLELISTS_CONFIG_FIELDSET_ADVANCED="Advanced"
 COM_SIMPLELISTS_CONFIG_FIELD_SEF_URL="SEF-type"
