--- a/joomla25/administrator/language/en-GB/en-GB.com_simplelists.ini
+++ b/joomla25/administrator/language/en-GB/en-GB.com_simplelists.ini
@@ -4,6 +4,7 @@ COM_SIMPLELISTS_HOME="Home"
 COM_SIMPLELISTS_ITEMS="Items"
 COM_SIMPLELISTS_CATEGORIES="Categories"
 COM_SIMPLELISTS_CATEGORY="Category"
+COM_SIMPLELISTS_CONFIGURATION="SimpleLists Configuration"
 
 ; Config
 COM_SIMPLELISTS_CONFIG_FIELDSET_BASIC="Basic"
