--- a/joomla25/administrator/language/en-GB/en-GB.com_simplelists.ini
+++ b/joomla25/administrator/language/en-GB/en-GB.com_simplelists.ini
@@ -16,6 +16,9 @@ COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_ALPHA="Title Alphabetical"
 COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_RALPHA="Title Reverse-Alphabetical"
 COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_RANDOM="Random"
 COM_SIMPLELISTS_CONFIG_FIELD_COLUMNS="Columns"
+COM_SIMPLELISTS_CONFIG_FIELD_COLUMN_MODE="Column Mode"
+COM_SIMPLELISTS_CONFIG_FIELD_COLUMN_MODE_OPTION_CSS="CSS style"
+COM_SIMPLELISTS_CONFIG_FIELD_COLUMN_MODE_OPTION_BOOTSTRAP="Bootstrap"
 COM_SIMPLELISTS_CONFIG_FIELD_DISABLE_JUMPLABELS="Disable Jumplabels"
 ;
 COM_SIMPLELISTS_CONFIG_FIELDSET_LAYOUT="SimpleLists Layout"
