Add missing language-strings

--- a/joomla25/administrator/language/en-GB/en-GB.com_simplelists.ini
+++ b/joomla25/administrator/language/en-GB/en-GB.com_simplelists.ini
@@ -3,7 +3,8 @@ COM_SIMPLELISTS="SimpleLists"
 COM_SIMPLELISTS_HOME="Home"
 COM_SIMPLELISTS_ITEMS="Items"
 COM_SIMPLELISTS_CATEGORIES="Categories"
-COM_SIMPLELISTS_CATEGORY="Category"
+COM_SIMPLELISTS_CATEGORY="SimpleLists Category"
+COM_SIMPLELISTS_CATEGORY_DESC="Category of SimpleLists items"
 COM_SIMPLELISTS_CONFIGURATION="SimpleLists Configuration"
 
 ; Config
@@ -21,28 +22,28 @@ COM_SIMPLELISTS_CONFIG_FIELD_COLUMN_MODE_OPTION_CSS="CSS style"
 COM_SIMPLELISTS_CONFIG_FIELD_COLUMN_MODE_OPTION_BOOTSTRAP="Bootstrap"
 COM_SIMPLELISTS_CONFIG_FIELD_DISABLE_JUMPLABELS="Disable Jumplabels"
 ;
-COM_SIMPLELISTS_CONFIG_FIELDSET_LAYOUT="SimpleLists Layout"
+COM_SIMPLELISTS_CONFIG_FIELDSET_LAYOUT="Layout"
 COM_SIMPLELISTS_CONFIG_FIELD_SHOW_TOTOP="To top"
 COM_SIMPLELISTS_CONFIG_FIELD_SHOW_TOTOP_IMAGE="To top image"
 COM_SIMPLELISTS_CONFIG_FIELD_SHOW_TOTOP_TEXT="To top text"
 ;
-COM_SIMPLELISTS_CONFIG_FIELDSET_STYLING="SimpleLists Styling"
+COM_SIMPLELISTS_CONFIG_FIELDSET_STYLING="Styling"
 COM_SIMPLELISTS_CONFIG_FIELD_LOAD_LIGHTBOX="Load Lightbox"
 COM_SIMPLELISTS_CONFIG_FIELD_LOAD_CSS="Load default CSS"
 COM_SIMPLELISTS_CONFIG_FIELD_LOAD_JS="Load default JS"
 ;
-COM_SIMPLELISTS_CONFIG_FIELDSET_PAGINATION="SimpleLists Pagination"
+COM_SIMPLELISTS_CONFIG_FIELDSET_PAGINATION="Pagination"
 COM_SIMPLELISTS_CONFIG_FIELD_USE_PAGINATION="Use pagination"
 COM_SIMPLELISTS_CONFIG_FIELD_LIMIT="Page limit"
 COM_SIMPLELISTS_CONFIG_FIELD_SHOW_INDEX="Item index"
 COM_SIMPLELISTS_CONFIG_FIELD_SHOW_ALPHA_INDEX="Alphabetical index"
 ;
-COM_SIMPLELISTS_CONFIG_FIELDSET_HIERARCHY="SimpleLists Hierarchy"
+COM_SIMPLELISTS_CONFIG_FIELDSET_HIERARCHY="Hierarchy"
 COM_SIMPLELISTS_CONFIG_FIELD_SHOW_CATEGORY_PARENT="Category Parent"
 COM_SIMPLELISTS_CONFIG_FIELD_SHOW_CATEGORY_CHILDS="Category Children"
 COM_SIMPLELISTS_CONFIG_FIELD_SHOW_CATEGORY_CHILDS_DESCRIPTION="Show Child Description"
 ;
-COM_SIMPLELISTS_CONFIG_FIELDSET_OTHER="SimpleLists Other Options"
+COM_SIMPLELISTS_CONFIG_FIELDSET_OTHER="Other Options"
 COM_SIMPLELISTS_CONFIG_FIELD_SHOW_HEADER_MODULES="Header Modules"
 COM_SIMPLELISTS_CONFIG_FIELD_SHOW_FOOTER_MODULES="Footer Modules"
 COM_SIMPLELISTS_CONFIG_FIELD_SHOW_FEED="RSS/Atom Feeds"
@@ -110,7 +111,7 @@ COM_SIMPLELISTS_ITEM_FIELDSET_TEXT="Text"
 COM_SIMPLELISTS_ITEM_FIELDSET_PARAMS="Parameters"
 
 ; Selections
-COM_SIMPLELISTS_SELECT_CATEGORY="Select Category"
+COM_SIMPLELISTS_SELECT_CATEGORY="None"
 COM_SIMPLELISTS_SELECT_LINKTYPE="Select Link Type"
 COM_SIMPLELISTS_SELECT_IMAGE="Select Image"
 COM_SIMPLELISTS_SELECT_ARTICLE="Select Article"
@@ -124,6 +125,9 @@ COM_SIMPLELISTS_START_UPLOAD="Start Upload"
 COM_SIMPLELISTS_BROWSE_FILES="Browse Files"
 COM_SIMPLELISTS_CLEAR_LIST="Clear List"
 COM_SIMPLELISTS_OVERALL_PROGRESS="Overall Progress"
+
+; Updater
+COM_SIMPLELISTS_SYSTEMPLUGIN="SimpleLists System Plugin"
 
 ; Yireo Library - controller
 LIB_YIREO_CONTROLLER_ILLEGAL_REQUEST="Illegal request"
@@ -195,4 +199,15 @@ LIB_YIREO_VIEW_TOOLBAR_CLOSE="Close"
 LIB_YIREO_VIEW_TOOLBAR_SAVENEW="Save &amp; new"
 LIB_YIREO_VIEW_TOOLBAR_SAVEANDCOPY="Save &amp; copy"
 LIB_YIREO_VIEW_TOOLBAR_SAVEASCOPY="Save as copy"
-
+; Yireo Library - Helper Install
+LIB_YIREO_HELPER_INSTALL_EXTENSION_SUCCESS="Extension '%s' has been automatically installed"
+LIB_YIREO_HELPER_INSTALL_ENABLE_PLUGIN_SUCCESS="Plugin '%s' has been automatically enabled"
+LIB_YIREO_HELPER_INSTALL_ENABLE_PLUGIN_FAIL="Failed to auto-enable plugin '%s'"
+LIB_YIREO_HELPER_INSTALL_REMOTE_DOWNLOAD_FAILED="Yireo Installer: Remote download failed"
+LIB_YIREO_HELPER_INSTALL_EXTENSION_FAIL="Yireo Installer: Failed to install %s"
+LIB_YIREO_HELPER_INSTALL_DOWNLOAD_NO_ARCHIVE="Yireo Installer: Downloaded file is not an archive: %s"
+LIB_YIREO_HELPER_INSTALL_DOWNLOAD_FILE_NOT_READABLE="Yireo Installer: Downloaded file is not readable: %s"
+LIB_YIREO_HELPER_INSTALL_DOWNLOAD_FILE_NOT_EXIST="Yireo Installer: Downloaded file does not exist: %s"
+LIB_YIREO_HELPER_INSTALL_DOWNLOAD_FILE_EMPTY="Yireo Installer: Downloaded file is empty: %s"
+LIB_YIREO_HELPER_INSTALL_MISSING="The %s is required but missing"
+; End
