--- a/joomla25/administrator/language/en-GB/en-GB.com_simplelists.ini
+++ b/joomla25/administrator/language/en-GB/en-GB.com_simplelists.ini
@@ -1,8 +1,8 @@
 ; Main 
 COM_SIMPLELISTS="SimpleLists"
-COM_SIMPLELISTS_HOME="Home"
-COM_SIMPLELISTS_ITEMS="Items"
-COM_SIMPLELISTS_CATEGORIES="Categories"
+COM_SIMPLELISTS_VIEW_HOME="Home"
+COM_SIMPLELISTS_VIEW_ITEMS="Items"
+COM_SIMPLELISTS_VIEW_CATEGORIES="Categories"
 COM_SIMPLELISTS_CATEGORY="SimpleLists Category"
 COM_SIMPLELISTS_CATEGORY_DESC="Category of SimpleLists items"
 COM_SIMPLELISTS_CONFIGURATION="SimpleLists Configuration"
@@ -128,86 +128,3 @@ COM_SIMPLELISTS_OVERALL_PROGRESS="Overall Progress"
 
 ; Updater
 COM_SIMPLELISTS_SYSTEMPLUGIN="SimpleLists System Plugin"
-
-; Yireo Library - controller
-LIB_YIREO_CONTROLLER_ILLEGAL_REQUEST="Illegal request"
-LIB_YIREO_CONTROLLER_ITEM_SAVED="Saved %s"
-LIB_YIREO_CONTROLLER_ITEM_NOT_SAVED="Unable to save %s"
-LIB_YIREO_CONTROLLER_ITEM_SELECT_DELETE="Select an item to delete"
-LIB_YIREO_CONTROLLER_ITEM_SELECT_PUBLISH="Select an item to publish"
-LIB_YIREO_CONTROLLER_ITEM_SELECT_UNPUBLISH="Select an item to unpublish"
-LIB_YIREO_CONTROLLER_ITEM_VOTE_SUCCESS="Thanks for rating for this item!"
-LIB_YIREO_CONTROLLER_ITEM_VOTE_ALREADY="You already rated this item today!"
-LIB_YIREO_CONTROLLER_ITEM_DELETED="1 Item Removed"
-LIB_YIREO_CONTROLLER_ITEMS_DELETED="%s Items Removed"
-LIB_YIREO_CONTROLLER_CATEGORY_DELETED="1 Category Removed"
-LIB_YIREO_CONTROLLER_CATEGORIES_DELETED="%s Categories Removed"
-LIB_YIREO_CONTROLLER_ITEM_PUBLISHED="1 Item Published"
-LIB_YIREO_CONTROLLER_ITEMS_PUBLISHED="%s Items Published"
-LIB_YIREO_CONTROLLER_CATEGORY_PUBLISHED="1 Category Published"
-LIB_YIREO_CONTROLLER_CATEGORIES_PUBLISHED="%s Categories Published"
-LIB_YIREO_CONTROLLER_ITEM_UNPUBLISHED="1 Item Unpublished"
-LIB_YIREO_CONTROLLER_ITEMS_UNPUBLISHED="%s Items Unpublished"
-LIB_YIREO_CONTROLLER_CATEGORY_UNPUBLISHED="1 Category Unpublished"
-LIB_YIREO_CONTROLLER_CATEGORIES_UNPUBLISHED="%s Categories Unpublished"
-; Yireo Library - model
-LIB_YIREO_MODEL_NOT_FOUND="Resource Not Found"
-LIB_YIREO_MODEL_NOT_AUTHORIZED="Access Forbidden"
-LIB_YIREO_MODEL_CHECKED_OUT="'%s' is locked by another user"
-LIB_YIREO_MODEL_DEBUG_QUERY="Debug Query"
-LIB_YIREO_MODEL_DEBUG_ERROR="Debug Error"
-; Yireo Library - table
-LIB_YIREO_TABLE_FIELD_VALUE_REQUIRED="Please provide a valid value for '%s'"
-LIB_YIREO_TABLE_FIELD_VALUE_DUPLICATE="%s '%s' is already in use"
-LIB_YIREO_TABLE_FIELDNAME_ID="Id"
-LIB_YIREO_TABLE_FIELDNAME_NAME="Name"
-LIB_YIREO_TABLE_FIELDNAME_TITLE="Title"
-LIB_YIREO_TABLE_FIELDNAME_TEXT="Text"
-LIB_YIREO_TABLE_FIELDNAME_DESCRIPTION="Description"
-LIB_YIREO_TABLE_FIELDNAME_ALIAS="Alias"
-LIB_YIREO_TABLE_FIELDNAME_URL="URL"
-LIB_YIREO_TABLE_FIELDNAME_PUBLISHED="Published"
-LIB_YIREO_TABLE_FIELDNAME_HITS="Hits"
-LIB_YIREO_TABLE_FIELDNAME_ORDERING="Order"
-LIB_YIREO_TABLE_FIELDNAME_ACCESS="Access"
-LIB_YIREO_TABLE_FIELDNAME_CATEGORIES="Categories"
-LIB_YIREO_TABLE_ERROR="Unknown Table Error"
-LIB_YIREO_TABLE_UNKNOWN_ID="Unknown Row ID"
-; Yireo Library - view
-LIB_YIREO_VIEW_EDIT="Edit"
-LIB_YIREO_VIEW_NEW="New"
-LIB_YIREO_VIEW_NUM="#"
-LIB_YIREO_VIEW_FILTER="#"
-LIB_YIREO_VIEW_LIST_NO_ITEMS="No items found"
-LIB_YIREO_VIEW_SUBMIT="Submit"
-LIB_YIREO_VIEW_SEARCH="Search"
-LIB_YIREO_VIEW_RESET="Reset"
-LIB_YIREO_VIEW_HOME="Control Panel"
-LIB_YIREO_VIEW_HOME_ADS="Yireo Focus"
-LIB_YIREO_VIEW_HOME_ADS_DISABLED="Advertizement is disabled"
-LIB_YIREO_VIEW_HOME_BLOG="Latest blog from Yireo"
-LIB_YIREO_VIEW_HOME_BLOG_DISABLED="Blog is disabled"
-LIB_YIREO_VIEW_HOME_CURRENTVERSION="Current version is %s"
-LIB_YIREO_VIEW_HOME_TUTORIALS="See our online tutorials for help"
-LIB_YIREO_VIEW_HOME_TWITTER="Follow us on Twitter"
-LIB_YIREO_VIEW_HOME_FACEBOOK="Follow us on Facebook"
-LIB_YIREO_VIEW_HOME_LIKE="Do you like %s?"
-LIB_YIREO_VIEW_HOME_REVIEW="Help us with your review or your vote on the official Joomla! Extensions Directory website"
-LIB_YIREO_VIEW_FEED_ERROR="Failed to load feed"
-LIB_YIREO_VIEW_TOOLBAR_COPY="Copy"
-LIB_YIREO_VIEW_TOOLBAR_CLOSE="Close"
-LIB_YIREO_VIEW_TOOLBAR_SAVENEW="Save &amp; new"
-LIB_YIREO_VIEW_TOOLBAR_SAVEANDCOPY="Save &amp; copy"
-LIB_YIREO_VIEW_TOOLBAR_SAVEASCOPY="Save as copy"
-; Yireo Library - Helper Install
-LIB_YIREO_HELPER_INSTALL_EXTENSION_SUCCESS="Extension '%s' has been automatically installed"
-LIB_YIREO_HELPER_INSTALL_ENABLE_PLUGIN_SUCCESS="Plugin '%s' has been automatically enabled"
-LIB_YIREO_HELPER_INSTALL_ENABLE_PLUGIN_FAIL="Failed to auto-enable plugin '%s'"
-LIB_YIREO_HELPER_INSTALL_REMOTE_DOWNLOAD_FAILED="Yireo Installer: Remote download failed"
-LIB_YIREO_HELPER_INSTALL_EXTENSION_FAIL="Yireo Installer: Failed to install %s"
-LIB_YIREO_HELPER_INSTALL_DOWNLOAD_NO_ARCHIVE="Yireo Installer: Downloaded file is not an archive: %s"
-LIB_YIREO_HELPER_INSTALL_DOWNLOAD_FILE_NOT_READABLE="Yireo Installer: Downloaded file is not readable: %s"
-LIB_YIREO_HELPER_INSTALL_DOWNLOAD_FILE_NOT_EXIST="Yireo Installer: Downloaded file does not exist: %s"
-LIB_YIREO_HELPER_INSTALL_DOWNLOAD_FILE_EMPTY="Yireo Installer: Downloaded file is empty: %s"
-LIB_YIREO_HELPER_INSTALL_MISSING="The %s is required but missing"
-; End
