--- a/joomla25/administrator/language/en-GB/en-GB.lib_yireo.ini
+++ b/joomla25/administrator/language/en-GB/en-GB.lib_yireo.ini
@@ -4,6 +4,7 @@
 LIB_YIREO_CONTROLLER_ILLEGAL_REQUEST="Illegal request"
 LIB_YIREO_CONTROLLER_ITEM_SAVED="Saved %s"
 LIB_YIREO_CONTROLLER_ITEM_NOT_SAVED="Unable to save %s"
+LIB_YIREO_CONTROLLER_ITEM_SELECT="Select an item"
 LIB_YIREO_CONTROLLER_ITEM_SELECT_DELETE="Select an item to delete"
 LIB_YIREO_CONTROLLER_ITEM_SELECT_PUBLISH="Select an item to publish"
 LIB_YIREO_CONTROLLER_ITEM_SELECT_UNPUBLISH="Select an item to unpublish"
@@ -21,8 +22,11 @@ LIB_YIREO_CONTROLLER_ITEM_UNPUBLISHED="1 Item Unpublished"
 LIB_YIREO_CONTROLLER_ITEMS_UNPUBLISHED="%s Items Unpublished"
 LIB_YIREO_CONTROLLER_CATEGORY_UNPUBLISHED="1 Category Unpublished"
 LIB_YIREO_CONTROLLER_CATEGORIES_UNPUBLISHED="%s Categories Unpublished"
+LIB_YIREO_CONTROLLER_LOGS_TRUNCATED="All logs deleted"
 LIB_YIREO_CONTROLLER_LOGS_DELETED="%s Logs deleted"
 LIB_YIREO_CONTROLLER_LOG_DELETED="1 Log deleted"
+LIB_YIREO_CONTROLLER_DB_UPGRADED="Applied database upgrades"
+LIB_YIREO_CONTROLLER_DEMO_NO_ACTION="No changes made. You are only allowed read-only access to this demo-site."
 
 ; Yireo Library - model
 LIB_YIREO_MODEL_NOT_FOUND="Resource Not Found"
@@ -39,11 +43,14 @@ LIB_YIREO_TABLE_FIELDNAME_NAME="Name"
 LIB_YIREO_TABLE_FIELDNAME_TITLE="Title"
 LIB_YIREO_TABLE_FIELDNAME_LABEL="Label"
 LIB_YIREO_TABLE_FIELDNAME_TEXT="Text"
+LIB_YIREO_TABLE_FIELDNAME_BODY="Body"
 LIB_YIREO_TABLE_FIELDNAME_DESCRIPTION="Description"
 LIB_YIREO_TABLE_FIELDNAME_ALIAS="Alias"
 LIB_YIREO_TABLE_FIELDNAME_URL="URL"
 LIB_YIREO_TABLE_FIELDNAME_PUBLISHED="Published"
 LIB_YIREO_TABLE_FIELDNAME_HITS="Hits"
+LIB_YIREO_TABLE_FIELDNAME_EMAIL="Email"
+LIB_YIREO_TABLE_FIELDNAME_TYPE="Type"
 LIB_YIREO_TABLE_FIELDNAME_ORDERING="Order"
 LIB_YIREO_TABLE_FIELDNAME_ACCESS="Access"
 LIB_YIREO_TABLE_FIELDNAME_CATEGORIES="Categories"
@@ -51,13 +58,15 @@ LIB_YIREO_TABLE_FIELDNAME_CATEGORIES="Categories"
 ; Yireo Library - view
 LIB_YIREO_VIEW_EDIT="Edit"
 LIB_YIREO_VIEW_NEW="New"
+LIB_YIREO_VIEW_NEW_X="New %s"
 LIB_YIREO_VIEW_NUM="#"
-LIB_YIREO_VIEW_FILTER="#"
 LIB_YIREO_VIEW_LIST_NO_ITEMS="No items found"
 LIB_YIREO_VIEW_SUBMIT="Submit"
 LIB_YIREO_VIEW_RESET="Reset"
 LIB_YIREO_VIEW_SEARCH="Search"
-;
+LIB_YIREO_VIEW_FILTER="Filter"
+
+; Yireo Libary - view - home
 LIB_YIREO_VIEW_HOME="Control Panel"
 LIB_YIREO_VIEW_HOME_SLOGAN="Opening Up Technology"
 LIB_YIREO_VIEW_HOME_ADS="Yireo Focus"
@@ -70,12 +79,24 @@ LIB_YIREO_VIEW_HOME_TWITTER="Follow us on twitter"
 LIB_YIREO_VIEW_HOME_FACEBOOK="Connect with us on facebook"
 LIB_YIREO_VIEW_HOME_VOTE="Vote for %s"
 LIB_YIREO_VIEW_HOME_JED="Joomla! Extensions Directory"
-;
+
+; Yireo Libary - view - feed
 LIB_YIREO_VIEW_FEED_ERROR="Failed to load feed"
-;
+
+; Yireo Libary - view - form
+LIB_YIREO_VIEW_FORM_FIELDSET_BASIC="Basic"
+LIB_YIREO_VIEW_FORM_FIELDSET_OTHER="Other"
+LIB_YIREO_VIEW_FORM_FIELDSET_PARAMS="Parameters"
+LIB_YIREO_VIEW_FORM_FIELDSET_EDITOR="Editor"
+
+; Yireo Libary - view - common
+LIB_YIREO_ACTIONS="Actions"
 LIB_YIREO_TUTORIALS="Tutorials"
 LIB_YIREO_FORUM="Forum"
-;
+LIB_YIREO_PENDING="Pending"
+LIB_YIREO_SENT="Sent"
+
+; Yireo Libary - view - toolbar
 LIB_YIREO_VIEW_TOOLBAR_HOME="Home"
 LIB_YIREO_VIEW_TOOLBAR_COPY="Copy"
 LIB_YIREO_VIEW_TOOLBAR_CLOSE="Close"
@@ -85,7 +106,9 @@ LIB_YIREO_VIEW_TOOLBAR_SAVEASCOPY="Save as copy"
 LIB_YIREO_VIEW_TOOLBAR_REFRESH="Refresh"
 LIB_YIREO_VIEW_TOOLBAR_BROWSE="Browse"
 LIB_YIREO_VIEW_TOOLBAR_DBUPGRADE="DB Upgrade"
+
 ;
+JACTIVE="Active"
 JDEFAULT="Default"
 JONLY="Only"
 JALL_EXCEPT="All except"
@@ -94,3 +117,4 @@ JORDERING="Ordering"
 JPUBLISHED="Published"
 JDETAILS="Details"
 JPARAMS="Parameters"
+JNUM="#"
