Move translation strings to generic lib_yireo file

--- a/joomla25/administrator/language/en-GB/en-GB.com_simplelists.ini
+++ b/joomla25/administrator/language/en-GB/en-GB.com_simplelists.ini
@@ -2,8 +2,15 @@
 COM_SIMPLELISTS="SimpleLists"
 COM_SIMPLELISTS_VIEW_HOME="Home"
 COM_SIMPLELISTS_VIEW_ITEMS="Items"
+COM_SIMPLELISTS_VIEW_ITEM="Item"
 COM_SIMPLELISTS_VIEW_CATEGORIES="Categories"
+COM_SIMPLELISTS_VIEW_CATEGORY="Category"
+
+; Common
+COM_SIMPLELISTS_CATEGORIES="Categories"
 COM_SIMPLELISTS_CATEGORY="SimpleLists Category"
+COM_SIMPLELISTS_ITEMS="Items"
+COM_SIMPLELISTS_ITEM="Item"
 COM_SIMPLELISTS_CATEGORY_DESC="Category of SimpleLists items"
 COM_SIMPLELISTS_CONFIGURATION="SimpleLists Configuration"
 
