--- a/joomla25/administrator/language/en-GB/en-GB.com_simplelists.ini
+++ b/joomla25/administrator/language/en-GB/en-GB.com_simplelists.ini
@@ -135,3 +135,5 @@ COM_SIMPLELISTS_OVERALL_PROGRESS="Overall Progress"
 
 ; Updater
 COM_SIMPLELISTS_SYSTEMPLUGIN="SimpleLists System Plugin"
+LIB_YIREO_HELPER_INSTALL_EXTENSION_SUCCESS="Plugin automatically installed"
+LIB_YIREO_HELPER_INSTALL_EXTENSION_ENABLE_PLUGIN_SUCCESS="Plugin automatically enabled"
