Add sorting by last published first

--- a/source/administrator/language/en-GB/en-GB.com_simplelists.ini
+++ b/source/administrator/language/en-GB/en-GB.com_simplelists.ini
@@ -23,7 +23,8 @@ COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_DATE="Most recent first"
 COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_ALPHA="Title Alphabetical"
 COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_RALPHA="Title Reverse-Alphabetical"
 COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_RANDOM="Random"
-COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_PUBLISHED="Last Published first"
+COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_PUBLISHED="First Published first"
+COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_RPUBLISHED="Last Published first"
 COM_SIMPLELISTS_CONFIG_FIELD_COLUMNS="Columns"
 COM_SIMPLELISTS_CONFIG_FIELD_COLUMN_MODE="Column Mode"
 COM_SIMPLELISTS_CONFIG_FIELD_COLUMN_MODE_OPTION_CSS="CSS style"
