--- a/source/administrator/language/en-GB/en-GB.com_simplelists.ini
+++ b/source/administrator/language/en-GB/en-GB.com_simplelists.ini
@@ -25,6 +25,7 @@ COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_RALPHA="Title Reverse-Alphabetical"
 COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_RANDOM="Random"
 COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_PUBLISHED="First Published first"
 COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_RPUBLISHED="Last Published first"
+COM_SIMPLELISTS_CONFIG_FIELD_ORDERING_OPTION_EVENT="Event Date (via Event Plugin)"
 COM_SIMPLELISTS_CONFIG_FIELD_COLUMNS="Columns"
 COM_SIMPLELISTS_CONFIG_FIELD_COLUMN_MODE="Column Mode"
 COM_SIMPLELISTS_CONFIG_FIELD_COLUMN_MODE_OPTION_CSS="CSS style"
