--- a/source/language/en-GB/en-GB.mod_simplelists_items.ini
+++ b/source/language/en-GB/en-GB.mod_simplelists_items.ini
@@ -15,6 +15,7 @@ MOD_SIMPLELISTS_ITEMS_FIELD_ORDERING_OPTION_RDATE="Most recent first"
 MOD_SIMPLELISTS_ITEMS_FIELD_ORDERING_OPTION_ALPHA="Title Alphabetically"
 MOD_SIMPLELISTS_ITEMS_FIELD_ORDERING_OPTION_RALPHA="Title Reverse-Alphabetical"
 MOD_SIMPLELISTS_ITEMS_FIELD_ORDERING_OPTION_RANDOM="Random"
+MOD_SIMPLELISTS_ITEMS_FIELD_ORDERING_OPTION_EVENT="Event Date (via Event Plugin)"
 ;
 MOD_SIMPLELISTS_ITEMS_FIELDSET_ITEMS="SimpleLists Items"
 ; @todo
