Fix menu-items of sys.ini

--- a/source/administrator/language/en-GB/en-GB.com_simplelists.sys.ini
+++ b/source/administrator/language/en-GB/en-GB.com_simplelists.sys.ini
@@ -1,9 +1,18 @@
 ; SimpleLists menu
 COM_SIMPLELISTS="SimpleLists"
+
+; Menu (old style)
 COM_SIMPLELISTS_DESC="This component shows a simple listing of items which can be displayed through multiple views/themes"
 COM_SIMPLELISTS_HOME="Home"
 COM_SIMPLELISTS_ITEMS="Items"
 COM_SIMPLELISTS_CATEGORIES="Categories"
+
+; Menu (new style)
+COM_SIMPLELISTS_VIEW_HOME="Home"
+COM_SIMPLELISTS_VIEW_ITEMS="Items"
+COM_SIMPLELISTS_VIEW_ITEM="Item"
+COM_SIMPLELISTS_VIEW_CATEGORIES="Categories"
+COM_SIMPLELISTS_VIEW_CATEGORY="Category"
 
 ; Items view
 COM_SIMPLELISTS_VIEW_ITEMS_LABEL="Items"
