--- a/source/administrator/language/en-GB/en-GB.com_simplelists.ini
+++ b/source/administrator/language/en-GB/en-GB.com_simplelists.ini
@@ -140,5 +140,5 @@ COM_SIMPLELISTS_OVERALL_PROGRESS="Overall Progress"
 COM_SIMPLELISTS_SYSTEMPLUGIN="SimpleLists System Plugin"
 COM_SIMPLELISTS_LAYOUT_TYPE="Layout Type"
 COM_SIMPLELISTS_LAYOUT_TYPE_DESC="Choose the HTML framework you want to use"
-LIB_YIREO_HELPER_INSTALL_EXTENSION_SUCCESS="Plugin automatically installed"
+LIB_YIREO_HELPER_INSTALL_EXTENSION_SUCCESS="Extensio automatically installed"
 LIB_YIREO_HELPER_INSTALL_EXTENSION_ENABLE_PLUGIN_SUCCESS="Plugin automatically enabled"
